Miscellaneous code cleanup (#955)